Fixed add course button getting cut off
Using CSS flex to solve all of our problems

--- a/autoscheduler/frontend/src/components/CourseSelectColumn/CourseSelectColumn.css
+++ b/autoscheduler/frontend/src/components/CourseSelectColumn/CourseSelectColumn.css
@@ -1,7 +1,8 @@
 .container {
     width: 20%;
     height: 100%;
-    padding-top: 1%;
+    display: flex;
+    flex-direction: column;
     padding-left: 1%;
 }
 
@@ -12,7 +13,9 @@
 .column-wrapper {
     position: relative;
     width: 100%;
-    height: 93%;
+    flex-grow: 1;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .course-select-column {
@@ -30,4 +33,5 @@
 
 #add-course-button {
     width: 100%;
+    margin-bottom: 8px;
 }
